--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ keywords = [
 ]
 dependencies = [
   "mcp>=1.8.0",
-  "refua",
+  "refua>=0.2.0",
 ]
 classifiers = [
   "Development Status :: 3 - Alpha",
