Update optional dependencies in pyproject.toml and poetry.lock to include 'dev' group

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,9 @@ dev = [
   "pre-commit>=4.1",
 ]
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = ">=4.1"
+
 [project.scripts]
 refua-mcp = "refua_mcp.server:main"
 
